ministry detail and event detail page

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -151,7 +151,7 @@
 
   .sec_ttl h2 span {
     color: #fff;
-    background-color: #2af598;
+    background-color: #1bd7bb;
     padding-left: 10px;
   }
 
