--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 @import url(assets/css/about.css);
 @import url(assets/css/ministries.css);
 @import url(assets/css/events.css);
+@import url(assets/css/event_detail.css);
 @import url(assets/css/contact.css);
 
 * {
@@ -62,7 +63,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.6);
 }
 
 .mainHeader .header_wrap {
@@ -70,12 +71,12 @@ p {
   display: -ms-flexbox;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 0;
+  padding: 10px 0;
   border-bottom: solid 1px rgba(255,255,255,0.2);
 }
 
 .mainHeader .logo img {
-  max-width: 150px;
+  max-width: 130px;
 }
 
 .navigationWrapper ul {
@@ -113,7 +114,7 @@ p {
 
 .navigationWrapper ul li.dropdown .dropdownMain {
   position: absolute;
-  top: 50px;
+  top: 20px;
   min-width: 180px;
   background-color: #000;
   flex-direction: column;
@@ -123,7 +124,7 @@ p {
   display: none;
 }
 
-.navigationWrapper ul li.dropdown .dropdownMain.active {
+.navigationWrapper ul li.dropdown:hover .dropdownMain {
   opacity: 1;
   visibility: visible;
   display: flex;
@@ -389,18 +390,6 @@ footer .copyright img {
   }
 }
 
-
-
-@media (max-width: 1199.98px) {
-  .mainHeader .header_wrap {
-      padding: 15px 0;
-  }
-
-  .mainHeader .logo img {
-      max-width: 140px;
-  }
-}
-
 @media (max-width: 991.98px) {
 
   .innerHeaderWrap ul {
@@ -408,7 +397,7 @@ footer .copyright img {
   }
   
   .mainHeader .logo img {
-      max-width: 130px;
+      max-width: 125px;
   }
 
   .navigationWrapper ul li.menu_item span.dropdown_text {
@@ -480,7 +469,7 @@ footer .copyright img {
       top: 70px;
       width: 300px;
       height: 0;
-      background-color: rgba(255,255,255,0.7);
+      background-color: rgba(255,255,255,0.8);
       box-shadow: 0px 4px 5px rgba(0,0,0,0.2);
       z-index: 999;
       overflow: hidden;
@@ -491,12 +480,12 @@ footer .copyright img {
       padding: 20px;
       height: 250px;
       overflow-y: auto;
-      border-bottom: 4px solid #8a0123;
+      border-bottom: 4px solid #22e4ac;
       border-radius: 0 0 15px 15px;
   }
 
   .navigationWrapper ul li.menu_item a {
-    color: #8a0123;
+    color: #14c9cb;
   }
 
   .navigationWrapper ul li.menu_item span.dropdown_text {
@@ -527,7 +516,7 @@ footer .copyright img {
       content: '';
       height: 3px;
       position: absolute;
-      background: linear-gradient(-90deg, #8a0123 0%, #cf2e2e 100%);
+      background: linear-gradient(-90deg, #2af598 0%, #14c9cb 100%);
       transition: all 0.2s ease;
   }
 
@@ -677,16 +666,8 @@ footer .copyright img {
       align-items: flex-start;
   }
 
-  .footer-sec {
-    background: linear-gradient(90deg, #8a0123 0%, #cf2e2e 100%);
-  }
-
   .footer-sec .custom_row {
     gap: 20px 0;
-  }
-
-  .mainHeader .header_wrap {
-      padding: 10px 0;
   }
 
   .mainHeader.showMenu .navigationWrapper {
