--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -22,12 +22,12 @@
 }
 
 .formSubmit .butn {
-    background-color: #2af598;
+    background-color: #b58811;
     color: #fff !important;
 }
 
 .formSubmit .butn:hover {
-    background-color: #14c9cb;
+    background-color: #e8c564;
     color: #fff !important;
 }
 
