--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -122,13 +122,18 @@
     margin-right: -15px;
   }
 
-  .custom_col-3, .custom_col-6 {
+  .custom_col-3, .custom_col-6, .custom_col-4 {
     padding: 0 15px;
   }
 
   .custom_col-6 {
     flex: 0 0 48%;
     max-width: 48%;
+  }
+
+  .custom_col-4 {
+    flex: 0 0 33%;
+    max-width: 33%;
   }
 
   .leftCol, .rightCol {
@@ -151,7 +156,7 @@
 
   .sec_ttl h2 span {
     color: #fff;
-    background-color: #1bd7bb;
+    background-color: #b58811;
     padding-left: 10px;
   }
 
@@ -165,7 +170,7 @@
     position: absolute;
     height: 10px;
     border-bottom: 2px solid;
-    border-color: #22e4ac;
+    border-color: #b58811;
     top: 0;
     width: 100px;
   }
@@ -181,7 +186,7 @@
   }
 
   .fancy_ttl i {
-    color: #22e4ac;
+    color: #b58811;
   }
 
   .sec_btnWrap {
@@ -292,6 +297,11 @@
 
 @media (max-width: 767.98px) {
 
+  .custom_col-4 {
+    flex: 0 0 48%;
+    max-width: 50%;
+  }
+
   .sec_ttl h2 {
     font-size: 22px;
   }
@@ -303,7 +313,7 @@
 
 @media (max-width: 575.98px) {
 
-  .custom_col-3, .custom_col-6 {
+  .custom_col-3, .custom_col-6, .custom_col-4 {
     flex: 0 0 100%;
     max-width: 100%;
   }
