--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,7 +2,7 @@
     padding: 100px 0 30px 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background: url(../assets/images/sec_bg-img.jpg), linear-gradient(45deg, #2af598 0%, #14c9cb 50%);
+    background: url(../assets/images/sec_bg-img.jpg), linear-gradient(45deg, #e8c564 0%, #b58811 50%);
     background-blend-mode: darken;
 }
 
