--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -20,3 +20,18 @@
     font-size: 40px;
     line-height: 1.2;
 }
+
+
+
+
+
+
+
+
+/** Responsive CSS starts here **/
+
+@media (max-width: 575.98px) {
+    .about_sec .about_cont {
+        font-size: 14px;
+    }
+}
