--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -122,8 +122,13 @@
     margin-right: -15px;
   }
 
-  .custom_col-3, .custom_col-6, .custom_col-4 {
+  .custom_col-3, .custom_col-6, .custom_col-4, .custom_col-12 {
     padding: 0 15px;
+  }
+
+  .custom_col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 
   .custom_col-6 {
